Fix top spacing on non toolbar views

--- a/administrator/templates/atum/scss/template.scss
+++ b/administrator/templates/atum/scss/template.scss
@@ -84,11 +84,16 @@
 }
 
 .content {
+  padding-top: 22px;
   border-radius: $border-radius;
 
   > .row {
     margin-right: 0;
     margin-left: 0;
+  }
+  
+  .subhead + & {
+    padding-top: 0;
   }
 
 }
